--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h2   {color: #555555;
       font-style: italic;}
 p    {color: #4267B3;
       font-style: italic;}
-label {color: #555555;
+label {color: #00008B;
       font-style: italic;}
 .images {border-radius: 5%;
 transition:transform .2s;
