--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1   {color: #555555;
       font-style: italic;}
 h2   {color: #555555;
       font-style: italic;}
-p    {color: #4267B3;
+p    {color: #00008B;
       font-style: italic;}
 label {color: #00008B;
       font-style: italic;}
